--- a/form-list.html
+++ b/form-list.html
@@ -6,10 +6,18 @@
 content="width=device-width,initial-scale=1">
 <link rel="stylesheet" type="text/css"
 href="form-style.css">
+  <script 
+
+src="https://kit.fontawesome.com/2dab97b508.js"
+
+crossorigin="anonymous">
+
+</script>
 <title>My form list</title>
 </head>
 <body>
 <h1><center><marquee>Welcome</marquee></center></h1>
+  <i class="fa-thin fa-bars"></i>
 <div id="border">
 <form action="/my-handling-form-page"
 autocomplete="on">
