--- a/form-list.html
+++ b/form-list.html
@@ -17,7 +17,7 @@ crossorigin="anonymous">
 </head>
 <body>
 <h1><center><marquee>Welcome</marquee></center></h1>
-  <i class="fa-thin fa-bars"></i>
+<i class="fas fa-file></i>
 <div id="border">
 <form action="/my-handling-form-page"
 autocomplete="on">
