--- a/form-list.html
+++ b/form-list.html
@@ -58,8 +58,9 @@ Date of birth:<input type="date" required><br>
 required></textarea><br>
 Upload:<input type="file" 
 name="upload" required>
-<br><br><br>
-<input type="submit" value="send">
+<br><br>
+<a href="#" class="btn">Register</a>
+<br>
 </form><br><br>
 </div>
 </body>
