--- a/form-list.html
+++ b/form-list.html
@@ -18,6 +18,7 @@ crossorigin="anonymous">
 <body>
 <h1><center><marquee>Welcome</marquee></center></h1>
 <i class="fas fa-file></i>
+          <header>
 <div id="border">
 <form action="/my-handling-form-page"
 autocomplete="on">
@@ -58,10 +59,10 @@ Date of birth:<input type="date" required><br>
 required></textarea><br>
 Upload:<input type="file" 
 name="upload" required>
-<br><br>
-<a href="#" class="btn">Register</a>
-<br>
+<br><br><br>
+<input type="submit" value="send">
 </form><br><br>
 </div>
+                                 </header>
 </body>
 </html>
